Cache used memory must include index allocated memory #398